--- a/sign.html
+++ b/sign.html
@@ -58,12 +58,12 @@
        </div>
 
        <label > <input type="checkbox" required> I hereby divulge the above details provided are true and correct </label>
-        <button type="submit " class="btn"> <a href="image/official dashboard/index.html">Create</a></button>
+        <button type="submit " class="btn"> <a href="official main dashboard/indexx.html">Create</a></button>
 <br>
 <br>
 <br>
-<p class="pot" > Already have an account  <a href="image/html 15 login form/login.html">Login</a></p>
-       <a href="image/html 15 login form/New trading website/index.html"><img src="image/Hfx_echange_logo-removebg-preview.png" width="250"></a> 
+<p class="pot" > Already have an account  <a href="html 15 login form/login.html">Login</a></p>
+       <a href="New trading website/index.html"><img src="image/Hfx_echange_logo-removebg-preview.png" width="250"></a> 
         <p class="tap"> We simplify and enhance the experience of investing in cryptocurrencies, We enable users to enter 
             the crypto market with zero learning curve required, 
             and we help construct diversifiied portfolios with the aim
