--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ $100,000 - 100% gain/bonus
                     <img src="images/footer4.png" alt="">        
                     </a>
 
-                    <a href="#" class="social">
+                    <a href="https://web.telegram.org/a/" class="social">
                         <img src="images/footer5.png" alt="">        
                         </a>
     </div>
