--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ $100,000 - 100% gain/bonus
             <img src="images/footer2.png" alt="">        
             </a>
 
-            <a href="https://www.instagram.com/alondra_ehf/" class="social">
+            <a href="https://www.instagram.com/grantt_cardonee/" class="social">
                 <img src="images/footer3.png" alt="">        
                 </a>
 
