--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ $50,000 - 50% gain/bonus <br>
 $100,000 - 100% gain/bonus
 
                 </p>
-                <div class="btn"><a href="sign up formnew/sign.html">Create account</a></div>
-                <div class="btn"><a href="html 15 login form/login.html">Login</a></div>
+                <div class="btn"><a href="https://hfxexchangeteam.github.io/Create-account/">Create account</a></div>
+                <div class="btn"><a href="https://hfxexchangeteam.github.io/Login/">Login</a></div>
             </div>
             <div class="account-image"></div>
         </div>
